Todo o conteúdo no texto

--- a/pt/bibliografia.bib
+++ b/pt/bibliografia.bib
@@ -8,51 +8,133 @@ year = {2010}
 @inproceedings{Atikoglu2012,
 author = {Atikoglu, Berk and Xu, Y and Frachtenberg, E},
 booktitle = {Proceedings of the 2012 ACM SIGMETRICS International Conference on Measurement and Modeling of Computer Systems},
+file = {:home/mdediana/Downloads/atikoglu12-memcached.pdf:pdf},
+isbn = {9781450310970},
 keywords = {key-value store,workload analysis,workload modeling},
 title = {{Workload analysis of a large-scale key-value store}},
 url = {http://www.ece.eng.wayne.edu/~sjiang/pubs/papers/atikoglu12-memcached.pdf http://dl.acm.org/citation.cfm?id=2254766},
 year = {2012}
 }
+@inproceedings{Baker2011,
+author = {Baker, Jason and Bond, Chris and Corbett, J.C. and Furman, JJ and Khorlin, Andrey and Larson, James and L\'{e}on, J.M. and Li, Yawei and Lloyd, Alexander and Yushprakh, Vadim},
+booktitle = {Conference on Innovative Data Systems Research (CIDR)},
+file = {:home/mdediana/Documents/ref/Baker et al. - 2011 - Megastore providing scalable, highly available storage for interactive services.pdf:pdf},
+keywords = {bigtable,distributed transactions,large databases,paxos},
+pages = {223--234},
+title = {{Megastore: providing scalable, highly available storage for interactive services}},
+url = {http://telecomblogs.in/wp-content/uploads/2011/02/Google-Infra-Research-Paper.pdf},
+year = {2011}
+}
+@article{Beyer2011,
+author = {Beyer, Felix and Koschel, Arne and Schulz, Christian and Sch\"{a}fer, Michael and Astrova, Irina and Reich, Alexander and Grivas, Stella Gatziu and Schaaf, Marc},
+file = {:home/mdediana/Documents/ref/Beyer et al. - 2011 - Testing the Suitability of Cassandra for Cloud Computing Environments Consistency, Availability and Partition Tolerance.pdf:pdf},
+isbn = {9781612081533},
+journal = {Computing},
+keywords = {availability,cassandra,cloud computing,experiments,partition tolerance},
+pages = {86--91},
+title = {{Testing the Suitability of Cassandra for Cloud Computing Environments Consistency, Availability and Partition Tolerance}},
+year = {2011}
+}
+@inproceedings{Calder2011,
+author = {Calder, Brad and Wang, Ju and Ogus, Aaron and Nilakantan, Niranjan and Skjolsvold, Arild and McKelvie, S. and Xu, Yikang and Srivastav, Shashwat and Wu, Jiesheng and Simitci, Huseyin and Others},
+booktitle = {Proceedings of the Twenty-Third ACM Symposium on Operating Systems Principles},
+file = {:home/mdediana/Documents/ref/Calder et al. - 2011 - Windows Azure Storage A Highly Available Cloud Storage Service with Strong Consistency.pdf:pdf},
+isbn = {9781450309776},
+keywords = {cloud storage,distributed storage systems,windows azure},
+pages = {143--157},
+publisher = {ACM},
+title = {{Windows Azure Storage: a highly available cloud storage service with strong consistency}},
+url = {http://dl.acm.org/citation.cfm?id=2043571},
+year = {2011}
+}
 @inproceedings{Cooper2008,
 author = {Cooper, Brian F. and Ramakrishnan, Raghu and Srivastava, Utkarsh and Silberstein, Adam and Bohannon, Philip and Jacobsen, Hans-arno and Puz, Nick and Weaver, Daniel and Yerneni, Ramana},
 booktitle = {Proceedings of the VLDB Endowment},
+file = {:home/mdediana/Documents/ref/Cooper et al. - 2008 - PNUTS Yahoo!'s Hosted Data Serving Platform.pdf:pdf},
+publisher = {VLDB Endowment},
 title = {{PNUTS: Yahoo!'s Hosted Data Serving Platform}},
 url = {http://portal.acm.org/citation.cfm?id=1454167},
 year = {2008}
 }
+@article{Cooper2010,
+address = {New York, New York, USA},
+annote = {Mede escalabilidade aumentando quantidade de n\'{o}s (e tamanho do dataset e request rate proporcionalmente) e mede a lat\^{e}ncia - se constante, o sistema escala bem},
+author = {Cooper, Brian and Silberstein, Adam and Tam, Erwin and Ramakrishnan, Raghu and Sears, Russell},
+doi = {10.1145/1807128.1807152},
+file = {:home/mdediana/Documents/ref/Cooper et al. - 2010 - Benchmarking cloud serving systems with YCSB.pdf:pdf},
+isbn = {9781450300360},
+journal = {ACM Symposium on Cloud Computing (SOCC 2010)},
+pages = {143},
+publisher = {ACM Press},
+title = {{Benchmarking cloud serving systems with YCSB}},
+url = {http://portal.acm.org/citation.cfm?id=1807128.1807152},
+year = {2010}
+}
 @article{DeCandia2007,
 author = {DeCandia, Giuseppe and Hastorun, Deniz and Jampani, Madan and Kakulapati, Gunavardhan and Lakshman, Avinash and Pilchin, Alex and Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
+file = {:home/mdediana/Documents/ref/DeCandia et al. - 2007 - Dynamo Amazon's Highly Available Key-value Store.pdf:pdf},
 journal = {ACM SIGOPS Operating Systems Review},
 number = {6},
+pages = {205--220},
+publisher = {ACM},
 title = {{Dynamo: Amazon's Highly Available Key-value Store}},
 url = {http://portal.acm.org/citation.cfm?id=1294261.1294281},
 year = {2007}
 }
 @misc{ESNet2012,
+pages = {2012},
 title = {{Host Tuning}},
 note = "[\'Ultimo Acesso em 01/02/2013.]",
 howpublished = {\url{http://fasterdata.es.net/host-tuning/background/}}
 }
+@inproceedings{Glendenning2011,
+author = {Glendenning, Lisa and Beschastnikh, I. and Krishnamurthy, A. and Anderson, Thomas},
+booktitle = {Proceedings of the Twenty-Third ACM Symposium on Operating Systems Principles},
+file = {:home/mdediana/Documents/ref/Glendenning et al. - 2011 - Scalable consistency in Scatter.pdf:pdf},
+keywords = {consistency,distributed systems,distributed transactions,fault tolerance,paxos,scalability,storage},
+pages = {15--28},
+publisher = {ACM},
+title = {{Scalable consistency in Scatter}},
+url = {http://dl.acm.org/citation.cfm?id=2043559},
+year = {2011}
+}
 @book{Jain1991,
 author = {Jain, Raj},
+publisher = {Wiley Computer Publishing, John Wiley \& Sons, Inc.},
 title = {{The Art of Computer Systems Performance Analysis: Techniques for Experimental Design, Measurements, Simulation, and Modeling}},
 year = {1991}
 }
 @inproceedings{Kadambi2011,
 author = {Kadambi, Sudarshan and Chen, Jianjun and Cooper, Brian and Lomax, David},
 booktitle = {Proceedings of the VLDB Endowment},
+file = {:home/mdediana/Documents/ref/Kadambi et al. - 2011 - Where in the World is My Data.pdf:pdf},
+pages = {1040--1050},
 title = {{Where in the World is My Data?}},
 url = {http://www.cs.unibo.it/~montesi/CBD/Letture/WhereIsMyData.pdf},
 year = {2011}
 }
 @article{Lakshman2010,
 author = {Lakshman, Avinash and Malik, Prashant},
+file = {:home/mdediana/Documents/ref/Lakshman, Malik - 2010 - Cassandra a decentralized structured storage system.pdf:pdf},
+issn = {0163-5980},
 journal = {ACM SIGOPS Operating Systems Review},
 number = {2},
+pages = {35--40},
+publisher = {ACM},
 title = {{Cassandra: a decentralized structured storage system}},
 url = {http://portal.acm.org/citation.cfm?id=1773922},
 volume = {44},
 year = {2010}
+}
+@article{Lloyd2011,
+author = {Lloyd, Wyatt and Freedman, M.J. and Kaminsky, Michael and Andersen, D.G.},
+isbn = {9781450309776},
+journal = {Lloydia (Cincinnati)},
+keywords = {causal,consistency,key-value storage,scalable wide-area replica-},
+pages = {1--16},
+title = {{Don't Settle for Eventual: Scalable Causal Consistency for Wide-Area Storage with COPS}},
+url = {http://www-cgi.cs.cmu.edu/~dga/papers/cops-sosp2011.pdf},
+year = {2011}
 }
 @misc{Pinger2013,
 title = {{PingER (Ping End-to-end Reporting)}},
@@ -75,15 +157,29 @@ howpublished = {\url{http://wiki.basho.com/Riak.html}}
 @inproceedings{Sovran2011,
 author = {Sovran, Yair and Power, R. and Aguilera, M.K. and Li, J.},
 booktitle = {Proceedings of the Twenty-Third ACM Symposium on Operating Systems Principles},
+file = {:home/mdediana/Documents/ref/Sovran et al. - 2011 - Transactional storage for geo-replicated systems.pdf:pdf},
 keywords = {asynchronous replication,dis-,geo-distributed systems,key-value store,parallel snapshot isolation,transactions,tributed storage},
+pages = {385--400},
 title = {{Transactional storage for geo-replicated systems}},
 url = {http://dl.acm.org/citation.cfm?id=2043592},
 year = {2011}
 }
+@inproceedings{VanRenesse2004,
+author = {van Renesse, R. and Schneider, F.B.},
+booktitle = {Proceedings of the 6th conference on Symposium on Opearting Systems Design \& Implementation-Volume 6},
+pages = {7},
+publisher = {USENIX Association},
+title = {{Chain replication for supporting high throughput and availability}},
+url = {http://portal.acm.org/citation.cfm?id=1251254.1251261},
+year = {2004}
+}
 @article{Vogels2009,
 author = {Vogels, Werner},
+doi = {10.1145/1435417.1435432},
+issn = {00010782},
 journal = {Communications of the ACM},
 number = {1},
+pages = {40--44},
 title = {{Eventually Consistent}},
 url = {http://portal.acm.org/citation.cfm?doid=1435417.1435432},
 volume = {52},
